Does not have a chance of staying alive indefinitely after water drains.
Archer attack-sound given for the energy ball attack (higher pitched kingpin launch)


Panthereyes much more willing to jump while pathing randomly around a player that cannot be reached directly.
Jump cool down released (scales with difficulty; less minimum time between jumps toward hard), jump range min/max distances extended.
More likely to land on the surface of objects it jumps against.
Unstuck jumps much smarter.  Will target the enemy(player) if visible and within the max leap distance instead of jumping forward a short distance (still used if the player is obscurred)

Kingpin reaction times for reflecting projectiles improved.
Charge-effects getting interrupted should be more likely to end properly (and turn looping sounds off).

cl_mp5_evil_skip no longer fails to play firing animation on changing maps (happened in some cases from differeng 'gpGlobals->time' bases)

New CVar: sv_rpg_projectile_model (defaults to 1).  Uses the mp5 grenade model for the rocket instead.

New CVars: hmilitaryDeadInvestigate, playerDeadTruce, playerDeadTalkerBehavior.  See 'cvar info.txt' for more info.
hmilitaryDeadInvestigate - When an hgrunt/hassault notices a member killed in eyesight or nearby (hears it), turns to face and approaches to 'investigate'.
playerDeadTruce - when the player is killed in singleplayer, all human factions (military & faculty) will cease fire.
playerDeadTalkerBehavior - when on, 

egon: glitch in sometimes failing to play the looping continual fire sound since a transition fixed.

rpg: new model + anims to work as expected


LATER:
Panthereye will also be more willing to jump while routing randomly around a player it can't reach to melee.  (maybe?)
Floater melee, anim now present in model.
Kingpin teleport on taking damage, + get a green healing aurora while in cover?  (unsure)

