@@ -2049,6 +2049,8 @@
 	EASY_CVAR_DECLARATION_SERVER(hud_brokentrans)\
 	EASY_CVAR_DECLARATION_SERVER(cl_fvox)\
 	EASY_CVAR_DECLARATION_SERVER(cl_ladder)\
+	EASY_CVAR_DECLARATION_SERVER(cl_playerhelmet)\
+	EASY_CVAR_DECLARATION_SERVER(cl_playergenderswap)\
 	EASY_CVAR_DECLARATION_SERVER(precacheAll)\
 	EASY_CVAR_DECLARATION_SERVER(cl_interp_entity)\
 	EASY_CVAR_DECLARATION_SERVER(hud_swapFirstTwoBuckets)\
@@ -2579,6 +2581,8 @@
 	EASY_CVAR_DECLARATION_CLIENT(hud_brokentrans)\
 	EASY_CVAR_DECLARATION_CLIENT(cl_fvox)\
 	EASY_CVAR_DECLARATION_CLIENT(cl_ladder)\
+	EASY_CVAR_DECLARATION_CLIENT(cl_playerhelmet)\
+	EASY_CVAR_DECLARATION_CLIENT(cl_playergenderswap)\
 	EASY_CVAR_DECLARATION_CLIENT(precacheAll)\
 	EASY_CVAR_DECLARATION_CLIENT(cl_interp_entity)\
 	EASY_CVAR_DECLARATION_CLIENT(hud_swapFirstTwoBuckets)\
@@ -3106,6 +3110,8 @@
 	EASY_CVAR_UPDATE_SERVER(hud_brokentrans)\
 	EASY_CVAR_UPDATE_SERVER(cl_fvox)\
 	EASY_CVAR_UPDATE_SERVER(cl_ladder)\
+	EASY_CVAR_UPDATE_SERVER(cl_playerhelmet)\
+	EASY_CVAR_UPDATE_SERVER(cl_playergenderswap)\
 	EASY_CVAR_UPDATE_SERVER(precacheAll)\
 	EASY_CVAR_UPDATE_SERVER(cl_interp_entity)\
 	EASY_CVAR_UPDATE_SERVER(hud_swapFirstTwoBuckets)\
@@ -3636,6 +3642,8 @@
 	EASY_CVAR_UPDATE_SERVER_DEDICATED(hud_brokentrans)\
 	EASY_CVAR_UPDATE_SERVER_DEDICATED(cl_fvox)\
 	EASY_CVAR_UPDATE_SERVER_DEDICATED(cl_ladder)\
+	EASY_CVAR_UPDATE_SERVER_DEDICATED(cl_playerhelmet)\
+	EASY_CVAR_UPDATE_SERVER_DEDICATED(cl_playergenderswap)\
 	EASY_CVAR_UPDATE_SERVER_DEDICATED(precacheAll)\
 	EASY_CVAR_UPDATE_SERVER_DEDICATED(cl_interp_entity)\
 	EASY_CVAR_UPDATE_SERVER_DEDICATED(hud_swapFirstTwoBuckets)\
@@ -4165,6 +4173,8 @@
 	EASY_CVAR_UPDATE_CLIENT(hud_brokentrans)\
 	EASY_CVAR_UPDATE_CLIENT(cl_fvox)\
 	EASY_CVAR_UPDATE_CLIENT(cl_ladder)\
+	EASY_CVAR_UPDATE_CLIENT(cl_playerhelmet)\
+	EASY_CVAR_UPDATE_CLIENT(cl_playergenderswap)\
 	EASY_CVAR_UPDATE_CLIENT(precacheAll)\
 	EASY_CVAR_UPDATE_CLIENT(cl_interp_entity)\
 	EASY_CVAR_UPDATE_CLIENT(hud_swapFirstTwoBuckets)\
@@ -4693,6 +4703,8 @@
 	EASY_CVAR_CREATE_SERVER_SETUP_A_CLIENTONLY(hud_brokentrans)\
 	EASY_CVAR_CREATE_SERVER_SETUP_A_CLIENTONLY(cl_fvox)\
 	EASY_CVAR_CREATE_SERVER_SETUP_A_CLIENTONLY(cl_ladder)\
+	EASY_CVAR_CREATE_SERVER_SETUP_A_CLIENTONLY(cl_playerhelmet)\
+	EASY_CVAR_CREATE_SERVER_SETUP_A_CLIENTONLY(cl_playergenderswap)\
 	EASY_CVAR_CREATE_SERVER_SETUP_A_SERVERONLY(precacheAll)\
 	EASY_CVAR_CREATE_SERVER_SETUP_A_CLIENTONLY(cl_interp_entity)\
 	EASY_CVAR_CREATE_SERVER_SETUP_A_CLIENTONLY(hud_swapFirstTwoBuckets)\
@@ -5220,6 +5232,8 @@
 	EASY_CVAR_CREATE_SERVER_A_CLIENTONLY(hud_brokentrans)\
 	EASY_CVAR_CREATE_SERVER_A_CLIENTONLY(cl_fvox)\
 	EASY_CVAR_CREATE_SERVER_A_CLIENTONLY(cl_ladder)\
+	EASY_CVAR_CREATE_SERVER_A_CLIENTONLY(cl_playerhelmet)\
+	EASY_CVAR_CREATE_SERVER_A_CLIENTONLY(cl_playergenderswap)\
 	EASY_CVAR_CREATE_SERVER_A_SERVERONLY(precacheAll)\
 	EASY_CVAR_CREATE_SERVER_A_CLIENTONLY(cl_interp_entity)\
 	EASY_CVAR_CREATE_SERVER_A_CLIENTONLY(hud_swapFirstTwoBuckets)\
@@ -5747,6 +5761,8 @@
 	EASY_CVAR_CREATE_CLIENT_A_CLIENTONLY(hud_brokentrans)\
 	EASY_CVAR_CREATE_CLIENT_A_CLIENTONLY(cl_fvox)\
 	EASY_CVAR_CREATE_CLIENT_A_CLIENTONLY(cl_ladder)\
+	EASY_CVAR_CREATE_CLIENT_A_CLIENTONLY(cl_playerhelmet)\
+	EASY_CVAR_CREATE_CLIENT_A_CLIENTONLY(cl_playergenderswap)\
 	EASY_CVAR_CREATE_CLIENT_A_SERVERONLY(precacheAll)\
 	EASY_CVAR_CREATE_CLIENT_A_CLIENTONLY(cl_interp_entity)\
 	EASY_CVAR_CREATE_CLIENT_A_CLIENTONLY(hud_swapFirstTwoBuckets)\
@@ -6273,6 +6289,8 @@
 	EASY_CVAR_RESET_CLIENTONLY(hud_brokentrans)\
 	EASY_CVAR_RESET_CLIENTONLY(cl_fvox)\
 	EASY_CVAR_RESET_CLIENTONLY(cl_ladder)\
+	EASY_CVAR_RESET_CLIENTONLY(cl_playerhelmet)\
+	EASY_CVAR_RESET_CLIENTONLY(cl_playergenderswap)\
 	EASY_CVAR_RESET(precacheAll)\
 	EASY_CVAR_RESET(cl_interp_entity)\
 	EASY_CVAR_RESET(hud_swapFirstTwoBuckets)\
@@ -6800,6 +6818,8 @@
 	EASY_CVAR_EXTERN(hud_brokentrans)\
 	EASY_CVAR_EXTERN(cl_fvox)\
 	EASY_CVAR_EXTERN(cl_ladder)\
+	EASY_CVAR_EXTERN(cl_playerhelmet)\
+	EASY_CVAR_EXTERN(cl_playergenderswap)\
 	EASY_CVAR_EXTERN(precacheAll)\
 	EASY_CVAR_EXTERN(cl_interp_entity)\
 	EASY_CVAR_EXTERN(hud_swapFirstTwoBuckets)\
@@ -7329,6 +7349,8 @@
 	EASY_CVAR_SYNCH_NOSAVE_SERVER(hud_brokentrans)\
 	EASY_CVAR_SYNCH_NOSAVE_SERVER(cl_fvox)\
 	EASY_CVAR_SYNCH_NOSAVE_SERVER(cl_ladder)\
+	EASY_CVAR_SYNCH_NOSAVE_SERVER(cl_playerhelmet)\
+	EASY_CVAR_SYNCH_NOSAVE_SERVER(cl_playergenderswap)\
 	EASY_CVAR_SYNCH_NOSAVE_SERVER(precacheAll)\
 	EASY_CVAR_SYNCH_NOSAVE_SERVER(cl_interp_entity)\
 	EASY_CVAR_SYNCH_NOSAVE_SERVER(hud_swapFirstTwoBuckets)\
